third_party/clingo/libclingo/clingo.h


typedef int32_t clingo_literal_t;
typedef uint32_t clingo_id_t;
enum clingo_error_e {
    clingo_error_success = 0,   
    clingo_error_runtime = 1,   
    clingo_error_logic = 2,     
    clingo_error_bad_alloc = 3, 
    clingo_error_unknown = 4    
};
typedef struct clingo_location {
    char const *begin_file; 
    char const *end_file;   
    size_t begin_line;      
    size_t end_line;        
    size_t begin_column;    
    size_t end_column;      
} clingo_location_t;
typedef uint64_t clingo_signature_t;
typedef uint64_t clingo_symbol_t;
typedef struct clingo_symbolic_atoms clingo_symbolic_atoms_t;
typedef uint64_t clingo_symbolic_atom_iterator_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_is_external(clingo_symbolic_atoms_t const *atoms,
                                                                 clingo_symbolic_atom_iterator_t iterator,
                                                                 bool *external);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_literal(clingo_symbolic_atoms_t const *atoms,
                                                             clingo_symbolic_atom_iterator_t iterator,
                                                             clingo_literal_t *literal);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_signatures_size(clingo_symbolic_atoms_t const *atoms,
                                                                     size_t *size);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_signatures(clingo_symbolic_atoms_t const *atoms,
                                                                clingo_signature_t *signatures, size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_next(clingo_symbolic_atoms_t const *atoms,
                                                          clingo_symbolic_atom_iterator_t iterator,
                                                          clingo_symbolic_atom_iterator_t *next);
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_is_valid(clingo_symbolic_atoms_t const *atoms,
                                                              clingo_symbolic_atom_iterator_t iterator, bool *valid);
typedef bool (*clingo_symbol_callback_t)(clingo_symbol_t const *symbols, size_t symbols_size, void *data);
enum clingo_theory_term_type_e {
    clingo_theory_term_type_tuple = 0,    
    clingo_theory_term_type_list = 1,     
    clingo_theory_term_type_set = 2,      
    clingo_theory_term_type_function = 3, 
    clingo_theory_term_type_number = 4,   
    clingo_theory_term_type_symbol = 5    
};
typedef int clingo_theory_term_type_t;
typedef struct clingo_theory_atoms clingo_theory_atoms_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_term_type(clingo_theory_atoms_t const *atoms, clingo_id_t term,
                                                             clingo_theory_term_type_t *type);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_term_number(clingo_theory_atoms_t const *atoms, clingo_id_t term,
                                                               int *number);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_term_name(clingo_theory_atoms_t const *atoms, clingo_id_t term,
                                                             char const **name);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_term_arguments(clingo_theory_atoms_t const *atoms, clingo_id_t term,
                                                                  clingo_id_t const **arguments, size_t *size);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_term_to_string_size(clingo_theory_atoms_t const *atoms,
                                                                       clingo_id_t term, size_t *size);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_term_to_string(clingo_theory_atoms_t const *atoms, clingo_id_t term,
                                                                  char *string, size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_element_tuple(clingo_theory_atoms_t const *atoms,
                                                                 clingo_id_t element, clingo_id_t const **tuple,
                                                                 size_t *size);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_element_condition(clingo_theory_atoms_t const *atoms,
                                                                     clingo_id_t element,
                                                                     clingo_literal_t const **condition, size_t *size);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_element_condition_id(clingo_theory_atoms_t const *atoms,
                                                                        clingo_id_t element,
                                                                        clingo_literal_t *condition);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_element_to_string_size(clingo_theory_atoms_t const *atoms,
                                                                          clingo_id_t element, size_t *size);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_element_to_string(clingo_theory_atoms_t const *atoms,
                                                                     clingo_id_t element, char *string, size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_size(clingo_theory_atoms_t const *atoms, size_t *size);
typedef struct clingo_propagate_init clingo_propagate_init_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_solver_literal(clingo_propagate_init_t const *init,
                                                                    clingo_literal_t aspif_literal,
                                                                    clingo_literal_t *solver_literal);
typedef bool (*clingo_ground_callback_t)(clingo_location_t const *location, char const *name,
                                         clingo_symbol_t const *arguments, size_t arguments_size, void *data,
                                         clingo_symbol_callback_t symbol_callback, void *symbol_callback_data);
typedef struct clingo_control clingo_control_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_control_theory_atoms(clingo_control_t const *control,
                                                           clingo_theory_atoms_t const **atoms);
typedef struct clingo_options clingo_options_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_options_add(clingo_options_t *options, char const *group, char const *option,
                                                  char const *description, bool (*parse)(char const *value, void *data),
                                                  void *data, bool multi, char const *argument);